objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>PT_CPL_External_ControlId__c</fullName>
        <externalId>true</externalId>
        <label>CPL External ControlId</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_IntegrationMessage__c</fullName>
        <label>Integration Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_IntegrationStatus__c</fullName>
        <label>Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>L2I_IntegrationStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PT_IntegrationType__c</fullName>
        <label>Integration Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CPL</fullName>
                </value>
                <value>
                    <fullName>PPL</fullName>
                </value>
                <value>
                    <fullName>PO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PT_Integration_Results__c</fullName>
        <label>Integration Results</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>